--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ ul{
   height: 500px;
   background-position: right center;
   background-size: cover; 
+  border-top: 1px solid transparent;
 }
 
 .hero-content{
@@ -27,6 +28,27 @@ ul{
   text-shadow: 3px 3px 3px #333;
 }
 
+.hero nav ul{
+  text-align: right;
+  margin: 20px 50px 0 0 ;
+}
+.hero nav li{
+  display: inline-block;
+  list-style: none;
+  margin-left: 10px;
+  border: 1px solid white;
+}
+
+.hero nav a{
+  background: rgba(0,0,0, 0.3);
+  display: block;
+  padding: 15px;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 10px;
+  letter-spacing: 2px;
+}
 main{
   width: 80%;
   margin: auto;
@@ -56,4 +78,8 @@ text-align: center;
 text-shadow: 2px 2px 2px black;
 background: #6b6c68;
   line-height: 80px;
+}
+
+.hero nav a:hover{
+  background: black;
 }
