--- a/style.css
+++ b/style.css
@@ -1,18 +1,14 @@
 body{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: arial, sans-serif;
   background: #ccc;
   margin: 0;
 }
 
-ul{
-  list-style: none;
-  
-}
 .hero{
-  background-image: url(imagens/bg-3.jpg);
+  background-image: url(../imagens/bg-3.jpg);
   height: 500px;
   background-position: right center;
-  background-size: cover; 
+  background-size: cover;
   border-top: 1px solid transparent;
 }
 
@@ -25,20 +21,27 @@ ul{
 .hero-content h1{
   text-transform: uppercase;
   font-size: 46px;
-  text-shadow: 3px 3px 3px #333;
+  text-shadow: 3px 3px 2px #333;
 }
+.hero-content p{
+  background-color: rgba(0,0,0, .8);
+  display: inline-block;
+  padding: 10px;
+  border-bottom: 2px solid white;
+}
+
 
 .hero nav ul{
   text-align: right;
-  margin: 20px 50px 0 0 ;
+  margin: 20px 50px 0 0;
 }
+
 .hero nav li{
   display: inline-block;
   list-style: none;
   margin-left: 10px;
   border: 1px solid white;
 }
-
 .hero nav a{
   background: rgba(0,0,0, 0.3);
   display: block;
@@ -46,9 +49,14 @@ ul{
   color: white;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 10px;
+  font-size: 12px;
   letter-spacing: 2px;
 }
+.hero nav a:hover{
+  background: rgba(0,0,0, 0.5);
+}
+
+
 main{
   width: 80%;
   margin: auto;
@@ -56,8 +64,28 @@ main{
 
 .content-section{
   background-color: white;
-  padding: 15px;
+  padding: 10px;
   margin-top: 15px;
+  overflow: auto;
+}
+
+.card{
+  width: 32%;
+  float: left;
+  box-sizing: border-box;
+}
+.card-1, .card-2{
+  margin-right: 2%;
+}
+.card img {
+ width: 100%; 
+  display: block;
+}
+.card p{
+  background-color: #393535;
+  color: white;
+  margin: 0;
+  padding: 15px;
 }
 
 .content-header{
@@ -78,8 +106,4 @@ text-align: center;
 text-shadow: 2px 2px 2px black;
 background: #6b6c68;
   line-height: 80px;
-}
-
-.hero nav a:hover{
-  background: black;
 }
